make qunit.js and qunit.css available via /@qunit?asset=qunit.js, not asset folder, close #10

--- a/example/test/sub1/test-file-sub1-with-html.test.html
+++ b/example/test/sub1/test-file-sub1-with-html.test.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>QUnit</title>
-    <link rel="stylesheet" href="/assets/stylesheets/qunit/qunit.css">
+    <link rel="stylesheet" href="/@qunit?asset=qunit.css">
 </head>
 <body>
 <div id="qunit"></div>
-<script src="/assets/javascripts/qunit/qunit.js"></script>
-<script src="assets/sub1/test-file-sub1-with-html.test.js"></script>
+<script src="/@qunit?asset=qunit.js"></script>
+<script src="/public/sub1/test-file-sub1-with-html.test.js"></script>
 </body>
 </html>
